<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.feng.snowfall.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        />
    <Button
        android:text="@string/button1"
        style="@style/CustomButtonStyle"
        android:id="@+id/button1" />

    <Button
        android:text="@string/button2"
        style="@style/CustomButtonStyle"
        android:id="@+id/button2" />

    <Button
        android:text="@string/button3"
        style="@style/CustomButtonStyle"
        android:id="@+id/button3" />

    <Button
        android:text="@string/button4"
        style="@style/CustomButtonStyle"
        android:id="@+id/button4" />

    <Button
        android:text="@string/button5"
        style="@style/CustomButtonStyle"
        android:id="@+id/button5" />

    <Button
        android:text="@string/button6"
        style="@style/CustomButtonStyle"
        android:id="@+id/button6" />

    </LinearLayout>
 </ScrollView>

